RESOLVED FIXED204569
REGRESSION(r252770): [GTK][WPE] Remote inspector broken in debug builds after r252770
https://bugs.webkit.org/show_bug.cgi?id=204569
Summary REGRESSION(r252770): [GTK][WPE] Remote inspector broken in debug builds after...
Carlos Garcia Campos
Reported 2019-11-25 02:07:50 PST
ASSERTION FAILED: !m_adoptionIsRequired DerivedSources/ForwardingHeaders/wtf/RefCounted.h(47) : void WTF::RefCountedBase::ref() const 1 0x7f3f21664a97 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(WTFCrash+0x9) [0x7f3f21664a97] 2 0x7f3f2e9a3063 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN3WTF15CrashOnOverflow10overflowedEv+0) [0x7f3f2e9a3063] 3 0x7f3f2e9a3337 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZNK3WTF14RefCountedBase3refEv+0x7d) [0x7f3f2e9a3337] 4 0x7f3f2170ea6b /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(_ZN3WTF3RefINS_16SocketConnectionENS_13DumbPtrTraitsIS1_EEEC2ERS1_+0x27) [0x7f3f2170ea6b] 5 0x7f3f2170e486 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(_ZN3WTF7makeRefINS_16SocketConnectionEEENS_3RefIT_NS_13DumbPtrTraitsIS3_EEEERS3_+0x23) [0x7f3f2170e486] 6 0x7f3f2170bd1e /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(_ZN3WTF16SocketConnectionC2EONS_7GRefPtrI18_GSocketConnectionEERKNS_7HashMapINS_7CStringESt4pairIS6_PFvRS0_P9_GVariantPvEENS_11CStringHashENS_10HashTraitsIS6_EENSG_ISE_EEEESB_+0x116) [0x7f3f2170bd1e] 7 0x7f3f2f5470ab /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN3WTF16SocketConnection6createEONS_7GRefPtrI18_GSocketConnectionEERKNS_7HashMapINS_7CStringESt4pairIS6_PFvRS0_P9_GVariantPvEENS_11CStringHashENS_10HashTraitsIS6_EENSG_ISE_EEEESB_+0x50) [0x7f3f2f5470ab] 8 0x7f3f20e5ab9b /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(_ZN9Inspector21RemoteInspectorServer26incomingConnectionCallbackEP15_GSocketServiceP18_GSocketConnectionP8_GObjectPS0_+0x49) [0x7f3f20e5ab9b] 9 0x7f3f1925b8ee /usr/lib/x86_64-linux-gnu/libffi.so.6(ffi_call_unix64+0x4c) [0x7f3f1925b8ee] 10 0x7f3f1925b2bf /usr/lib/x86_64-linux-gnu/libffi.so.6(ffi_call+0x22f) [0x7f3f1925b2bf] 11 0x7f3f233cf509 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libgobject-2.0.so.0(g_cclosure_marshal_generic+0x1d9) [0x7f3f233cf509] 12 0x7f3f233ced3d /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libgobject-2.0.so.0(g_closure_invoke+0x19d) [0x7f3f233ced3d] 13 0x7f3f233e1d35 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libgobject-2.0.so.0(+0x22d35) [0x7f3f233e1d35] 14 0x7f3f233ea4b0 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libgobject-2.0.so.0(g_signal_emit_valist+0x480) [0x7f3f233ea4b0] 15 0x7f3f233eb452 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libgobject-2.0.so.0(g_signal_emit+0x82) [0x7f3f233eb452] 16 0x7f3f234b1fa2 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libgio-2.0.so.0(+0x9bfa2) [0x7f3f234b1fa2] 17 0x7f3f234b3799 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libgio-2.0.so.0(+0x9d799) [0x7f3f234b3799] 18 0x7f3f234b4216 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libgio-2.0.so.0(+0x9e216) [0x7f3f234b4216] 19 0x7f3f234acbc8 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libgio-2.0.so.0(+0x96bc8) [0x7f3f234acbc8] 20 0x7f3f234a3e99 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libgio-2.0.so.0(+0x8de99) [0x7f3f234a3e99] 21 0x7f3f232ee6b8 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libglib-2.0.so.0(g_main_context_dispatch+0x138) [0x7f3f232ee6b8] 22 0x7f3f232eea78 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libglib-2.0.so.0(+0x4ca78) [0x7f3f232eea78] 23 0x7f3f232eed62 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libglib-2.0.so.0(g_main_loop_run+0xb2) [0x7f3f232eed62] 24 0x7f3f23ac0fa5 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libgtk-3.so.0(gtk_main+0x75) [0x7f3f23ac0fa5] 25 0x557345cc26d5 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/Debug/bin/MiniBrowser(+0x1b6d5) [0x557345cc26d5] 26 0x7f3f19dba09b /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xeb) [0x7f3f19dba09b] 27 0x557345cb409a /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/Debug/bin/MiniBrowser(+0xd09a) [0x557345cb409a]
Attachments
Patch (1.34 KB, patch)
2019-11-25 02:09 PST, Carlos Garcia Campos
zan: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews212 for win-future (15.65 MB, application/zip)
2019-11-25 03:39 PST, EWS Watchlist
no flags
Carlos Garcia Campos
Comment 1 2019-11-25 02:09:33 PST
EWS Watchlist
Comment 2 2019-11-25 03:39:12 PST
Comment on attachment 384282 [details] Patch Attachment 384282 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/13277896 Number of test failures exceeded the failure limit.
EWS Watchlist
Comment 3 2019-11-25 03:39:15 PST
Created attachment 384288 [details] Archive of layout-test-results from ews212 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews212 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
Carlos Garcia Campos
Comment 4 2019-11-25 03:39:54 PST
Note You need to log in before you can comment on or make changes to this bug.