REGRESSION(r252770): [GTK][WPE] Remove inspector broken in debug builds after r252770 https://bugs.webkit.org/show_bug.cgi?id=204569

Reviewed by Žan Doberšek.

We need to call relaxAdoptionRequirement() in SocketConnection constructor because we are taking a reference for
the read monitor lambda.

* wtf/glib/SocketConnection.cpp:
(WTF::SocketConnection::SocketConnection):

Canonical link: https://commits.webkit.org/217828@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252853 268f45cc-cd09-0410-ab3c-d52691b4dbfc